# ComfyUI

./: .gitignore  .mcp.json  CLAUDE.md  execution.py  main.py  nodes.py  openapi.yaml  pyproject.toml  requirements.txt  server.py
.claude/: settings.json
.claude/rules/python/: output-format.md
.githooks/: pre-commit
.github/workflows/: test-ci.yml
app/: model_manager.py  prompt_metadata.py
app/assets/api/: routes.py  schemas_in.py  schemas_out.py
app/assets/database/queries/: asset_reference.py
app/assets/services/: path_utils.py
comfy/: cli_args.py  model_detection.py  model_management.py  model_patcher.py  pinned_memory.py  sd.py  supported_models.py  utils.py
comfy/image_encoders/: dino2.py
comfy/k_diffusion/: sampling.py
comfy/ldm/cube/: gpt.py
comfy/ldm/depth_anything_3/: model.py  preprocess.py  transform.py
comfy_api/latest/: _caching.py  _io.py
comfy_api_nodes/util/: upload_helpers.py
comfy_execution/: caching.py  graph.py  jobs.py  type_resolver.py
comfy_extras/: nodes_ace.py  nodes_ar_video.py  nodes_audio.py  nodes_chroma_radiance.py  nodes_cube.py  nodes_depth_anything_3.py  nodes_flux.py  nodes_hidream_o1.py  nodes_hunyuan.py  nodes_hunyuan3d.py  nodes_kandinsky5.py  nodes_lt.py  nodes_scail.py  nodes_sd3.py  nodes_seed.py  nodes_video_model.py  nodes_void.py  nodes_wan.py
launcher/: launch_comfyui.bat  launch_comfyui.lnk  launch_comfyui.py  shutdown_comfyui.bat  shutdown_comfyui.ps1
tests-unit/app_test/: model_manager_test.py  test_prompt_metadata.py
tests-unit/assets_test/: test_list_cursor.py  test_list_filter.py
tests-unit/assets_test/queries/: test_asset_info.py
tests-unit/assets_test/services/: test_asset_response_loader_path.py  test_path_utils.py
tests-unit/execution_test/: scheduler_malformed_node_test.py  test_type_resolver.py
tests-unit/jobs_cancel_test/: jobs_cancel_test.py
tests-unit/security_test/: test_ghsa_779p_01_origin_csrf.py  test_ghsa_779p_03_annotated_traversal.py  test_ghsa_779p_05_dangerous_content_types.py
tests/execution/: test_execution.py
tests/execution/testing_nodes/testing-pack/: specific_tests.py
user/default/workflows/: FLUX 1.0.json  FLUX 2.0 Klein Live2D.json  FLUX Sprite.json  noobai.json
utils/: origin_check.py
